// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RiskGauge inline component from Dashboard > matches snapshot at score 580 1`] = `
<div
  class="risk-gauge-container"
>
  <p
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  >
    Risk score 580 of 850. Trend: Stable.
  </p>
  <svg
    aria-label="Risk score 580 of 850. Trend: Stable."
    class="risk-gauge-svg"
    data-reduced-motion="false"
    data-testid="risk-gauge-svg"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    viewBox="0 0 160 100"
  >
    <title
      id="risk-gauge-title-qorqmuqryjr"
    >
      Risk score 580 of 850. Trend: Stable.
    </title>
    <path
      class="risk-gauge-bg"
      d="M 25 75 A 55 55 0 0 1 135 75"
    />
    <path
      class="risk-gauge-fill"
      d="M 25 75 A 55 55 0 0 1 135 75"
      stroke="#f85149"
      stroke-dasharray="172.78759594743863"
      stroke-dashoffset="54.88547165389227"
    />
    <text
      class="risk-gauge-score"
      x="80"
      y="63"
    >
      580
    </text>
    <text
      class="risk-gauge-label"
      x="80"
      y="37"
    >
      Risk Score
    </text>
  </svg>
  <div
    class="risk-meta"
  >
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Trend
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158); display: flex; align-items: center; gap: 8px;"
      >
        <span>
          ─
           
          Stable
        </span>
      </span>
    </div>
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Last Updated
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158);"
      >
        Jan 1, 2025
      </span>
    </div>
  </div>
  <div
    class="risk-meta-item"
    style="margin-top: 0.75rem; justify-content: center;"
  >
    <span
      aria-label="Press question mark to open help overlay"
      class="kbd-hint-container"
      role="group"
    >
      <span
        class="sr-only"
      >
        Press question mark to open help overlay
      </span>
      <span
        aria-hidden="true"
        class="kbd-hint-group"
      >
        <kbd
          class="kbd-hint-key"
        >
          ?
        </kbd>
      </span>
      <span
        aria-hidden="true"
        class="kbd-hint-label"
      >
        Explain Risk
      </span>
    </span>
  </div>
</div>
`;

exports[`RiskGauge inline component from Dashboard > matches snapshot at score 660 1`] = `
<div
  class="risk-gauge-container"
>
  <p
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  >
    Risk score 660 of 850. Trend: Stable.
  </p>
  <svg
    aria-label="Risk score 660 of 850. Trend: Stable."
    class="risk-gauge-svg"
    data-reduced-motion="false"
    data-testid="risk-gauge-svg"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    viewBox="0 0 160 100"
  >
    <title
      id="risk-gauge-title-7ao0e0820vk"
    >
      Risk score 660 of 850. Trend: Stable.
    </title>
    <path
      class="risk-gauge-bg"
      d="M 25 75 A 55 55 0 0 1 135 75"
    />
    <path
      class="risk-gauge-fill"
      d="M 25 75 A 55 55 0 0 1 135 75"
      stroke="#d29922"
      stroke-dasharray="172.78759594743863"
      stroke-dashoffset="38.623109682368636"
    />
    <text
      class="risk-gauge-score"
      x="80"
      y="63"
    >
      660
    </text>
    <text
      class="risk-gauge-label"
      x="80"
      y="37"
    >
      Risk Score
    </text>
  </svg>
  <div
    class="risk-meta"
  >
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Trend
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158); display: flex; align-items: center; gap: 8px;"
      >
        <span>
          ─
           
          Stable
        </span>
      </span>
    </div>
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Last Updated
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158);"
      >
        Jan 1, 2025
      </span>
    </div>
  </div>
  <div
    class="risk-meta-item"
    style="margin-top: 0.75rem; justify-content: center;"
  >
    <span
      aria-label="Press question mark to open help overlay"
      class="kbd-hint-container"
      role="group"
    >
      <span
        class="sr-only"
      >
        Press question mark to open help overlay
      </span>
      <span
        aria-hidden="true"
        class="kbd-hint-group"
      >
        <kbd
          class="kbd-hint-key"
        >
          ?
        </kbd>
      </span>
      <span
        aria-hidden="true"
        class="kbd-hint-label"
      >
        Explain Risk
      </span>
    </span>
  </div>
</div>
`;

exports[`RiskGauge inline component from Dashboard > matches snapshot at score 740 1`] = `
<div
  class="risk-gauge-container"
>
  <p
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
  >
    Risk score 740 of 850. Trend: Stable.
  </p>
  <svg
    aria-label="Risk score 740 of 850. Trend: Stable."
    class="risk-gauge-svg"
    data-reduced-motion="false"
    data-testid="risk-gauge-svg"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    viewBox="0 0 160 100"
  >
    <title
      id="risk-gauge-title-ddiiwx1dgug"
    >
      Risk score 740 of 850. Trend: Stable.
    </title>
    <path
      class="risk-gauge-bg"
      d="M 25 75 A 55 55 0 0 1 135 75"
    />
    <path
      class="risk-gauge-fill"
      d="M 25 75 A 55 55 0 0 1 135 75"
      stroke="#3fb950"
      stroke-dasharray="172.78759594743863"
      stroke-dashoffset="22.360747710845004"
    />
    <text
      class="risk-gauge-score"
      x="80"
      y="63"
    >
      740
    </text>
    <text
      class="risk-gauge-label"
      x="80"
      y="37"
    >
      Risk Score
    </text>
  </svg>
  <div
    class="risk-meta"
  >
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Trend
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158); display: flex; align-items: center; gap: 8px;"
      >
        <span>
          ─
           
          Stable
        </span>
      </span>
    </div>
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Last Updated
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158);"
      >
        Jan 1, 2025
      </span>
    </div>
  </div>
  <div
    class="risk-meta-item"
    style="margin-top: 0.75rem; justify-content: center;"
  >
    <span
      aria-label="Press question mark to open help overlay"
      class="kbd-hint-container"
      role="group"
    >
      <span
        class="sr-only"
      >
        Press question mark to open help overlay
      </span>
      <span
        aria-hidden="true"
        class="kbd-hint-group"
      >
        <kbd
          class="kbd-hint-key"
        >
          ?
        </kbd>
      </span>
      <span
        aria-hidden="true"
        class="kbd-hint-label"
      >
        Explain Risk
      </span>
    </span>
  </div>
</div>
`;
